--- a/templates/index.html
+++ b/templates/index.html
@@ -135,7 +135,7 @@
 
 <body>
     <div class="container">
-        <h1>Weather App</h1>
+        <h1>Weather Web</h1>
         <form method="GET" action="/forecast">
             <div class="input-group">
                 <input type="text" id="cityInput" name="city" class="form-control" placeholder="Enter city name" required>
