--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
 
 <body>
     <div class="container">
-        <h1>Weather Webite</h1>
+        <h1>Update Weather Webite</h1>
         <form method="GET" action="/forecast">
             <div class="input-group">
                 <input type="text" id="cityInput" name="city" class="form-control" placeholder="Enter city name" required>
