--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
         </form>
 
         <div class="weather">
-            <h2>City, Country</h2>
+            <h2>Vancouver, Canada</h2>
             <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="Weather Icon">
             <p>Temperature: 20°C</p>
             <p>Feels Like: 22°C</p>
