--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
-            background-image: linear-gradient(to right, #6a11cb, #2575fc);
+          
+            background-image: url('bg.jpg');
             color: #fff;
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
             font-family: Arial, sans-serif;
         }
         .container {
