--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,10 @@
     <style>
         body {
           
-            background-image: url('bg.jpg');
+            background-image: linear-gradient(to right, #6a11cb, #2575fc);
             color: #fff;
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
             font-family: Arial, sans-serif;
+            
         }
         .container {
             max-width: 900px;
