--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,12 @@
     <style>
         body {
           
-            background-image: linear-gradient(to right, #6a11cb, #2575fc);
-            color: #fff;
-            font-family: Arial, sans-serif;
+            background-image: url('bg.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            margin: 0; /* Removes default margin provided by browsers */
+            height: 100vh; /* This makes sure that the background covers the full view height */
             
         }
         .container {
