--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
           
-            background-color: #f0f4f8;
+            background: linear-gradient(to bottom, #e0eafc, #cfdef3);
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
